#3 bootstrap 4 and font noto sans

--- a/Accueil/CSS/sass/_index.scss
+++ b/Accueil/CSS/sass/_index.scss
@@ -1,13 +1,11 @@
 body{
+    font-family: 'Noto Sans', sans-serif !important;
     .title{
         background-color : 
         h1{
             
         }
         h2{
-            text-align: center;
-        }
-        h3{
             text-align: center;
         }
     }
