--- a/Accueil/CSS/stylesheets/style.css
+++ b/Accueil/CSS/stylesheets/style.css
@@ -1,39 +1,39 @@
-/* line 2, ../sass/_index.scss */
+/* line 1, ../sass/_index.scss */
+body {
+  font-family: 'Noto Sans', sans-serif !important;
+}
+/* line 3, ../sass/_index.scss */
 body .title {
   background-color: h1;
 }
-/* line 7, ../sass/_index.scss */
+/* line 8, ../sass/_index.scss */
 body .title h2 {
   text-align: center;
 }
-/* line 10, ../sass/_index.scss */
-body .title h3 {
-  text-align: center;
+/* line 14, ../sass/_index.scss */
+body .wrapper a div {
+  width: auto;
 }
 /* line 16, ../sass/_index.scss */
-body .wrapper a div {
-  width: auto;
-}
-/* line 18, ../sass/_index.scss */
 body .wrapper a div img {
   width: auto;
   height: auto;
+}
+/* line 29, ../sass/_index.scss */
+body .wrapper a div {
+  width: auto;
 }
 /* line 31, ../sass/_index.scss */
-body .wrapper a div {
-  width: auto;
-}
-/* line 33, ../sass/_index.scss */
 body .wrapper a div img {
   width: auto;
   height: auto;
 }
-/* line 47, ../sass/_index.scss */
+/* line 45, ../sass/_index.scss */
 body .wrapper a div img {
   width: auto;
   height: auto;
 }
-/* line 58, ../sass/_index.scss */
+/* line 56, ../sass/_index.scss */
 body footer legend {
   text-align: center;
 }
