--- a/Accueil/CSS/sass/_index.scss
+++ b/Accueil/CSS/sass/_index.scss
@@ -1,60 +1,65 @@
 body{
     font-family: 'Noto Sans', sans-serif !important;
-    .title{
-        background-color : 
-        h1{
-            
+    .row{
+        margin: 0px;
+        .title{
+            h1{
+                white-space:nowrap;
+            }
+            h2{
+                text-align: center;
+            }
         }
-        h2{
-            text-align: center;
-        }
-    }
-    .wrapper{
-        a{
-            div{
-                width: auto;
-                img{
+        .wrapper{
+            p{
+                margin: 0 auto 1rem auto;
+            }
+            a{
+                section{
                     width: auto;
-                    height: auto;
-                }
-                h3{
+                    img{
+                        width: auto;
+                        height: auto;
+                    }
+                    h3{
 
-                }
-                p{
+                    }
+                    p{
 
-                }
-            }    
-        }
-        a{
-            div{
-                width: auto;
-                img{
+                    }
+                }    
+            }
+            a{
+                section{
                     width: auto;
-                    height: auto;
-                }
-                h3{
-                    
-                }
-                p{
+                    img{
+                        width: auto;
+                        height: auto;
+                    }
+                    h3{
 
-                }
-            }   
-        }
-        a{
-            div{
-                img{
-                    width: auto;
-                    height: auto;
-                }
-                h3{
+                    }
+                    p{
 
-                }
-            }   
+                    }
+                }   
+            }
+            a{
+                section{
+                    img{
+                        width: auto;
+                        height: auto;
+                    }
+                    h3{
+
+                    }
+                }   
+            }
         }
-    }
-    footer{
-        legend{
-            text-align: center;
-        }
+        footer{
+            legend{
+                text-align: center;
+            }
+        }         
     }
 }
