--- a/Accueil/CSS/stylesheets/style.css
+++ b/Accueil/CSS/stylesheets/style.css
@@ -1,155 +1,123 @@
 /* line 1, ../sass/_index.scss */
 html {
   height: 100%;
+}
+/* line 3, ../sass/_index.scss */
+html body {
   background-color: #fff;
 }
 /* line 5, ../sass/_index.scss */
-html body .site-wrapper {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
-  display: table;
-  width: 100%;
-  height: 100%;
-  /* For at least Firefox */
-  min-height: 100%;
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+html body .navbar {
+  background-color: #fff;
+  margin-bottom: 55px;
 }
-/* line 15, ../sass/_index.scss */
-html body .site-wrapper .site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
+/* line 8, ../sass/_index.scss */
+html body .navbar .navbar-brand {
+  color: #e74c3c;
 }
-@media (min-width: 62em) {
-  /* line 15, ../sass/_index.scss */
-  html body .site-wrapper .site-wrapper-inner {
-    vertical-align: middle;
-  }
+/* line 14, ../sass/_index.scss */
+html body .navbar div .navbar-nav .nav-item .nav-link {
+  color: #2c3e50;
 }
 /* line 21, ../sass/_index.scss */
-html body .site-wrapper .site-wrapper-inner .cover-container {
-  margin-right: auto;
-  margin-left: auto;
+html body .cover {
+  height: 100%;
+  background-color: #fff;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-content: center;
+  text-align: center;
+  background-image: url("../../Img/Banni%C3%A8re%20Web%20Developpement%20WM.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
-@media (min-width: 62em) {
-  /* line 21, ../sass/_index.scss */
-  html body .site-wrapper .site-wrapper-inner .cover-container {
-    width: 42rem;
-  }
+/* line 34, ../sass/_index.scss */
+html body .cover a {
+  width: 50px;
+  height: 50px;
+  background-color: #e74c3c;
+  -webkit-mask-image: url("../../Img/Icons/arrow-with-circle-down.svg");
+  mask-image: url("../../Img/Icons/arrow-with-circle-down.svg");
+  margin-bottom: 50px;
 }
-/* line 27, ../sass/_index.scss */
-html body .site-wrapper .site-wrapper-inner .cover-container .masthead {
-  margin-bottom: 2rem;
-  background-color: #333;
-}
-@media (min-width: 62em) {
-  /* line 27, ../sass/_index.scss */
-  html body .site-wrapper .site-wrapper-inner .cover-container .masthead {
-    position: fixed;
-    top: 0;
-    width: 42rem;
-  }
-}
-/* line 35, ../sass/_index.scss */
-html body .site-wrapper .site-wrapper-inner .cover-container .masthead .inner {
-  padding: 30px;
-}
-/* line 37, ../sass/_index.scss */
-html body .site-wrapper .site-wrapper-inner .cover-container .masthead .inner .masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-@media (min-width: 48em) {
-  /* line 37, ../sass/_index.scss */
-  html body .site-wrapper .site-wrapper-inner .cover-container .masthead .inner .masthead-brand {
-    float: left;
-  }
-}
-@media (min-width: 48em) {
-  /* line 44, ../sass/_index.scss */
-  html body .site-wrapper .site-wrapper-inner .cover-container .masthead .inner .nav-masthead {
-    float: right;
-  }
-}
-/* line 48, ../sass/_index.scss */
-html body .site-wrapper .site-wrapper-inner .cover-container .masthead .inner .nav-masthead a {
-  margin-left: 1rem;
-  padding: .25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, 0.5);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
-}
-/* line 56, ../sass/_index.scss */
-html body .site-wrapper .site-wrapper-inner .cover-container .masthead .inner .nav-masthead :hover, html body .site-wrapper .site-wrapper-inner .cover-container .masthead .inner .nav-masthead :focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255, 255, 255, 0.25);
-}
-/* line 62, ../sass/_index.scss */
-html body .site-wrapper .site-wrapper-inner .cover-container .masthead .inner .nav-masthead .active a, html body .site-wrapper .site-wrapper-inner .cover-container .masthead .inner .nav-masthead .active :hover, html body .site-wrapper .site-wrapper-inner .cover-container .masthead .inner .nav-masthead .active :focus {
-  border-bottom-color: rgba(255, 255, 255, 0.25);
-}
-/* line 69, ../sass/_index.scss */
-html body .site-wrapper .site-wrapper-inner .cover-container .cover {
-  padding: 0 1.5rem;
-}
-/* line 72, ../sass/_index.scss */
-html body .site-wrapper .site-wrapper-inner .cover-container .cover .lead .btn-lg {
-  padding: .75rem 1.25rem;
-  font-weight: 700;
-}
-@media (min-width: 62em) {
-  /* line 78, ../sass/_index.scss */
-  html body .site-wrapper .site-wrapper-inner .cover-container .mastfoot {
-    width: 42rem;
-  }
-}
-/* line 86, ../sass/_index.scss */
+/* line 43, ../sass/_index.scss */
 html body .row {
+  background-color: #fff;
   margin: 0px;
 }
-/* line 89, ../sass/_index.scss */
-html body .row .title h1 {
-  white-space: nowrap;
+/* line 46, ../sass/_index.scss */
+html body .row h1 {
+  margin: 50px auto 0px auto;
+  font-size: 50px;
 }
-/* line 92, ../sass/_index.scss */
-html body .row .title h2 {
+/* line 50, ../sass/_index.scss */
+html body .row p {
+  margin: 0 auto 50px auto;
   text-align: center;
 }
-/* line 97, ../sass/_index.scss */
+/* line 55, ../sass/_index.scss */
 html body .row .wrapper p {
   margin: 0 auto 1rem auto;
 }
-/* line 101, ../sass/_index.scss */
-html body .row .wrapper a section {
+/* line 58, ../sass/_index.scss */
+html body .row .wrapper a {
+  position: relative;
+  display: block;
+  max-width: 650px;
+  margin: 0 auto;
+}
+/* line 63, ../sass/_index.scss */
+html body .row .wrapper a img {
   width: auto;
+  height: auto;
+}
+/* line 67, ../sass/_index.scss */
+html body .row .wrapper a section {
+  /*position: absolute;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  opacity: 0;
+  color: #fff;
+  background: rgba(240,95,64,.9);
+  -webkit-transition: all .2s;
+  -moz-transition: all .2s;
+  transition: all .2s;*/
+}
+/* line 84, ../sass/_index.scss */
+html body .row .wrapper a {
+  position: relative;
+  display: block;
+  max-width: 650px;
+  margin: 0 auto;
+}
+/* line 89, ../sass/_index.scss */
+html body .row .wrapper a img {
+  width: auto;
+  height: auto;
+}
+/* line 98, ../sass/_index.scss */
+html body .row .wrapper a {
+  position: relative;
+  display: block;
+  max-width: 650px;
+  margin: 0 auto;
 }
 /* line 103, ../sass/_index.scss */
-html body .row .wrapper a section img {
+html body .row .wrapper a img {
   width: auto;
   height: auto;
 }
-/* line 116, ../sass/_index.scss */
-html body .row .wrapper a section {
-  width: auto;
-}
-/* line 118, ../sass/_index.scss */
-html body .row .wrapper a section img {
-  width: auto;
-  height: auto;
-}
-/* line 132, ../sass/_index.scss */
-html body .row .wrapper a section img {
-  width: auto;
-  height: auto;
-}
-/* line 143, ../sass/_index.scss */
+/* line 113, ../sass/_index.scss */
 html body .row footer legend {
   text-align: center;
 }
-/* line 146, ../sass/_index.scss */
+/* line 116, ../sass/_index.scss */
 html body .row footer p {
   font-style: italic;
   font-size: 0.5rem;
