--- a/Accueil/CSS/sass/_index.scss
+++ b/Accueil/CSS/sass/_index.scss
@@ -1,6 +1,13 @@
+*{
+    position: relative;
+}
 html {
+    .row{
+        margin: 0px;
+    }
     height: 100%;
     body {
+        position: relative;
         background-color: #fff;
         .navbar {
             background-color: #fff;
@@ -22,9 +29,9 @@ html {
             }
         }
         .cover {
+            margin: 0px;
             height: 100%;
             background-color: #fff;
-            height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: end;
@@ -43,30 +50,71 @@ html {
                 margin-bottom: 50px;
             }
         }
-        .row {
+        .presentation {
             background-color: #fff;
             margin: 0px;
             h1{
                 margin: 50px auto 0px auto;
                 font-size: 50px;
                 color:#2c3e50;
+                text-align: center;
             }
             p {
                 margin: 0 auto 50px auto;
                 text-align: center;
                 color:#2c3e50;
             }
-            .wrapper {
+            .tripoint {
+                min-height: 270px;
+                padding: 50px 0px 0px;
+                margin: 0px;
+                background-color: #e74c3c;
+                justify-content: center;
+                justify-content: space-between;
+                div {
+                    .disponibilite, .toutprojet, .formation {
+                        width: 50px;
+                        height: 50px;
+                        margin: 0 auto;
+                        background-color: #fff;
+                        text-align: center;
+                    }
+                    .disponibilite {
+                        -webkit-mask-image: url("../../Img/Icons/calendar.svg");
+                        mask-image: url("../../Img/Icons/calendar.svg");
+                        mask-repeat: no-repeat;
+                    }
+                    .toutprojet {
+                        -webkit-mask-image: url("../../Img/Icons/code.svg");
+                        mask-image: url("../../Img/Icons/code.svg");
+                        mask-repeat: no-repeat;
+                    }
+                    .formation {
+                        -webkit-mask-image: url("../../Img/Icons/open-book.svg");
+                        mask-image: url("../../Img/Icons/open-book.svg");
+                        mask-repeat: no-repeat;
+                    }
+                    p, h4{
+                        color: #fff;
+                        text-align: center;
+                    }
+                }
+            }
+            .projet {
+                margin: 0px;
                 padding: 0px;
                 p {
                     margin: 0 auto 1rem auto;
                 }
                 a {
                     position: relative;
-                    display: block;
+                    display: flex;
+                    align-items: center;
                     max-width: 650px;
                     margin: 0 auto;
                     padding: 0px;
+                    min-height: 165px;
+                    height: 100%;
                     img {
                         width: auto;
                         height: auto;
@@ -99,67 +147,117 @@ html {
                         }
                         &:hover{
                             opacity: 0.9;
+                            height: 100%;
                         }
                     }
                 }
             }
+            .social-network-container {
+                min-height: 270px;
+                background-color: #2c3e50;
+                flex-direction: column;
+                padding: 25px 0px;
+                h2 {
+                    text-align: center;
+                    color: #fff;
+                    padding-bottom: 25px;
+                }
+                .social-network {
+                    justify-content: space-between;
+                    flex-direction: row;
+                    .linkedin, .stackoverflow, .twitter {
+                        width: 50px;
+                        height: 50px;
+                        margin: 0 auto;
+                        background-color: #fff;
+                        text-align: center;
+                        text-decoration: none;
+                    }
+                    .linkedin {
+                        -webkit-mask-image: url("../../Img/Icons/linkedin.svg");
+                        mask-image: url("../../Img/Icons/linkedin.svg");
+                        mask-repeat: no-repeat;
+                    }
+                    .stackoverflow {
+                        -webkit-mask-image: url("../../Img/Icons/stackoverflow.svg");
+                        mask-image: url("../../Img/Icons/stackoverflow.svg");
+                        mask-repeat: no-repeat;
+                    }
+                    .twitter {
+                        -webkit-mask-image: url("../../Img/Icons/twitter.svg");
+                        mask-image: url("../../Img/Icons/twitter.svg");
+                        mask-repeat: no-repeat;
+                    }
+                    a, p {
+                        color: #fff;
+                        text-align: center;
+                    }
+                }
+            }
             .contact-container {
+                margin: 0px;
+                flex-direction: column;
                 padding: 50px 0px;
-                background-color: #e74c3c;
+                background-color: #fff;
                 h2{
                     text-align: center;
                     font-size: 50px;
-                    color:#fff;
+                    color: #2c3e50;
                 }
                 p{
-                    color:#fff;
+                    text-align: center;
+                    color: #2c3e50;
                 }
                 .contact{
-                    background-color: #e74c3c;
+                    background-color: #fff;
                     .contact-left{
-                        text-align: center;
                         .phone{
                             width: 50px;
                             height: 50px;
                             margin: 0 auto;
-                            background-color: #fff;
+                            background-color: #2c3e50;
                             -webkit-mask-image: url("../../Img/Icons/phone.svg");
                             mask-image: url("../../Img/Icons/phone.svg");
                             mask-repeat: no-repeat;
                         }
                         p{
-                           color:#fff; 
+                            text-align: center;
+                            color:#2c3e50; 
                         }
                     }
                     .contact-right{
-                        text-align: center;
                         .mail{
                             width: 50px;
                             height: 50px;
                             margin: 0 auto;
-                            background-color: #fff;
+                            background-color: #2c3e50;
+                            text-align: center;
+                            color:#2c3e50; 
                             -webkit-mask-image: url("../../Img/Icons/mail.svg");
                             mask-image: url("../../Img/Icons/mail.svg");
                             mask-repeat: no-repeat;
                         }
                         a{
-                           color:#fff; 
+                            display: flex;
+                            justify-content: center;
+                            text-align: center;
+                            color:#2c3e50;
                         }
                     }
                 }
             }
-            footer {
-                background-color: #fff;
-                padding: 0px;
-                legend {
-                    text-align: center;
-                    color: #e74c3c;
-                }
-                p {
-                    font-style: italic;
-                    font-size: 0.5rem;
-                    text-align: center;
-                }
+        }
+        .footer {
+            background-color: #fff;
+            margin: 0px;
+            legend {
+                text-align: center;
+                color: #e74c3c;
+            }
+            p {
+                font-style: italic;
+                font-size: 0.5rem;
+                text-align: center;
             }
         }
     }
