--- a/Accueil/CSS/stylesheets/style.css
+++ b/Accueil/CSS/stylesheets/style.css
@@ -1,33 +1,43 @@
 /* line 1, ../sass/_index.scss */
+* {
+  position: relative;
+}
+
+/* line 4, ../sass/_index.scss */
 html {
   height: 100%;
 }
-/* line 3, ../sass/_index.scss */
+/* line 5, ../sass/_index.scss */
+html .row {
+  margin: 0px;
+}
+/* line 9, ../sass/_index.scss */
 html body {
+  position: relative;
   background-color: #fff;
 }
-/* line 5, ../sass/_index.scss */
+/* line 12, ../sass/_index.scss */
 html body .navbar {
   background-color: #fff;
   margin-bottom: 55px;
 }
-/* line 8, ../sass/_index.scss */
+/* line 15, ../sass/_index.scss */
 html body .navbar .navbar-brand {
   color: #e74c3c;
 }
-/* line 10, ../sass/_index.scss */
+/* line 17, ../sass/_index.scss */
 html body .navbar .navbar-brand:hover {
   color: #2c3e50;
 }
-/* line 17, ../sass/_index.scss */
+/* line 24, ../sass/_index.scss */
 html body .navbar div .navbar-nav .nav-item .nav-link {
   color: #2c3e50;
 }
-/* line 24, ../sass/_index.scss */
+/* line 31, ../sass/_index.scss */
 html body .cover {
+  margin: 0px;
   height: 100%;
   background-color: #fff;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: end;
@@ -38,7 +48,7 @@ html body .cover {
   background-position: center;
   background-size: cover;
 }
-/* line 37, ../sass/_index.scss */
+/* line 44, ../sass/_index.scss */
 html body .cover a {
   width: 50px;
   height: 50px;
@@ -47,46 +57,91 @@ html body .cover a {
   mask-image: url("../../Img/Icons/arrow-with-circle-down.svg");
   margin-bottom: 50px;
 }
-/* line 46, ../sass/_index.scss */
-html body .row {
+/* line 53, ../sass/_index.scss */
+html body .presentation {
   background-color: #fff;
   margin: 0px;
 }
-/* line 49, ../sass/_index.scss */
-html body .row h1 {
+/* line 56, ../sass/_index.scss */
+html body .presentation h1 {
   margin: 50px auto 0px auto;
   font-size: 50px;
   color: #2c3e50;
+  text-align: center;
 }
-/* line 54, ../sass/_index.scss */
-html body .row p {
+/* line 62, ../sass/_index.scss */
+html body .presentation p {
   margin: 0 auto 50px auto;
   text-align: center;
   color: #2c3e50;
 }
-/* line 59, ../sass/_index.scss */
-html body .row .wrapper {
+/* line 67, ../sass/_index.scss */
+html body .presentation .tripoint {
+  min-height: 270px;
+  padding: 50px 0px 0px;
+  margin: 0px;
+  background-color: #e74c3c;
+  justify-content: center;
+  justify-content: space-between;
+}
+/* line 75, ../sass/_index.scss */
+html body .presentation .tripoint div .disponibilite, html body .presentation .tripoint div .toutprojet, html body .presentation .tripoint div .formation {
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+  background-color: #fff;
+  text-align: center;
+}
+/* line 82, ../sass/_index.scss */
+html body .presentation .tripoint div .disponibilite {
+  -webkit-mask-image: url("../../Img/Icons/calendar.svg");
+  mask-image: url("../../Img/Icons/calendar.svg");
+  mask-repeat: no-repeat;
+}
+/* line 87, ../sass/_index.scss */
+html body .presentation .tripoint div .toutprojet {
+  -webkit-mask-image: url("../../Img/Icons/code.svg");
+  mask-image: url("../../Img/Icons/code.svg");
+  mask-repeat: no-repeat;
+}
+/* line 92, ../sass/_index.scss */
+html body .presentation .tripoint div .formation {
+  -webkit-mask-image: url("../../Img/Icons/open-book.svg");
+  mask-image: url("../../Img/Icons/open-book.svg");
+  mask-repeat: no-repeat;
+}
+/* line 97, ../sass/_index.scss */
+html body .presentation .tripoint div p, html body .presentation .tripoint div h4 {
+  color: #fff;
+  text-align: center;
+}
+/* line 103, ../sass/_index.scss */
+html body .presentation .projet {
+  margin: 0px;
   padding: 0px;
 }
-/* line 61, ../sass/_index.scss */
-html body .row .wrapper p {
+/* line 106, ../sass/_index.scss */
+html body .presentation .projet p {
   margin: 0 auto 1rem auto;
 }
-/* line 64, ../sass/_index.scss */
-html body .row .wrapper a {
+/* line 109, ../sass/_index.scss */
+html body .presentation .projet a {
   position: relative;
-  display: block;
+  display: flex;
+  align-items: center;
   max-width: 650px;
   margin: 0 auto;
   padding: 0px;
+  min-height: 165px;
+  height: 100%;
 }
-/* line 70, ../sass/_index.scss */
-html body .row .wrapper a img {
+/* line 118, ../sass/_index.scss */
+html body .presentation .projet a img {
   width: auto;
   height: auto;
 }
-/* line 74, ../sass/_index.scss */
-html body .row .wrapper a section {
+/* line 122, ../sass/_index.scss */
+html body .presentation .projet a section {
   background-color: #e74c3c;
   position: absolute;
   bottom: 0;
@@ -100,93 +155,145 @@ html body .row .wrapper a section {
   -moz-transition: all .2s;
   transition: all .2s;
 }
-/* line 87, ../sass/_index.scss */
-html body .row .wrapper a section div {
+/* line 135, ../sass/_index.scss */
+html body .presentation .projet a section div {
   position: absolute;
   top: 50%;
   width: 100%;
   transform: translateY(-50%);
   text-align: center;
 }
-/* line 93, ../sass/_index.scss */
-html body .row .wrapper a section div h3 {
+/* line 141, ../sass/_index.scss */
+html body .presentation .projet a section div h3 {
   color: #fff;
 }
-/* line 96, ../sass/_index.scss */
-html body .row .wrapper a section div p {
+/* line 144, ../sass/_index.scss */
+html body .presentation .projet a section div p {
   color: #fff;
 }
-/* line 100, ../sass/_index.scss */
-html body .row .wrapper a section:hover {
+/* line 148, ../sass/_index.scss */
+html body .presentation .projet a section:hover {
   opacity: 0.9;
+  height: 100%;
 }
-/* line 106, ../sass/_index.scss */
-html body .row .contact-container {
-  padding: 50px 0px;
-  background-color: #e74c3c;
+/* line 155, ../sass/_index.scss */
+html body .presentation .social-network-container {
+  min-height: 270px;
+  background-color: #2c3e50;
+  flex-direction: column;
+  padding: 25px 0px;
 }
-/* line 109, ../sass/_index.scss */
-html body .row .contact-container h2 {
+/* line 160, ../sass/_index.scss */
+html body .presentation .social-network-container h2 {
   text-align: center;
-  font-size: 50px;
   color: #fff;
+  padding-bottom: 25px;
 }
-/* line 114, ../sass/_index.scss */
-html body .row .contact-container p {
-  color: #fff;
+/* line 165, ../sass/_index.scss */
+html body .presentation .social-network-container .social-network {
+  justify-content: space-between;
+  flex-direction: row;
 }
-/* line 117, ../sass/_index.scss */
-html body .row .contact-container .contact {
-  background-color: #e74c3c;
-}
-/* line 119, ../sass/_index.scss */
-html body .row .contact-container .contact .contact-left {
-  text-align: center;
-}
-/* line 121, ../sass/_index.scss */
-html body .row .contact-container .contact .contact-left .phone {
+/* line 168, ../sass/_index.scss */
+html body .presentation .social-network-container .social-network .linkedin, html body .presentation .social-network-container .social-network .stackoverflow, html body .presentation .social-network-container .social-network .twitter {
   width: 50px;
   height: 50px;
   margin: 0 auto;
   background-color: #fff;
+  text-align: center;
+  text-decoration: none;
+}
+/* line 176, ../sass/_index.scss */
+html body .presentation .social-network-container .social-network .linkedin {
+  -webkit-mask-image: url("../../Img/Icons/linkedin.svg");
+  mask-image: url("../../Img/Icons/linkedin.svg");
+  mask-repeat: no-repeat;
+}
+/* line 181, ../sass/_index.scss */
+html body .presentation .social-network-container .social-network .stackoverflow {
+  -webkit-mask-image: url("../../Img/Icons/stackoverflow.svg");
+  mask-image: url("../../Img/Icons/stackoverflow.svg");
+  mask-repeat: no-repeat;
+}
+/* line 186, ../sass/_index.scss */
+html body .presentation .social-network-container .social-network .twitter {
+  -webkit-mask-image: url("../../Img/Icons/twitter.svg");
+  mask-image: url("../../Img/Icons/twitter.svg");
+  mask-repeat: no-repeat;
+}
+/* line 191, ../sass/_index.scss */
+html body .presentation .social-network-container .social-network a, html body .presentation .social-network-container .social-network p {
+  color: #fff;
+  text-align: center;
+}
+/* line 197, ../sass/_index.scss */
+html body .presentation .contact-container {
+  margin: 0px;
+  flex-direction: column;
+  padding: 50px 0px;
+  background-color: #fff;
+}
+/* line 202, ../sass/_index.scss */
+html body .presentation .contact-container h2 {
+  text-align: center;
+  font-size: 50px;
+  color: #2c3e50;
+}
+/* line 207, ../sass/_index.scss */
+html body .presentation .contact-container p {
+  text-align: center;
+  color: #2c3e50;
+}
+/* line 211, ../sass/_index.scss */
+html body .presentation .contact-container .contact {
+  background-color: #fff;
+}
+/* line 214, ../sass/_index.scss */
+html body .presentation .contact-container .contact .contact-left .phone {
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+  background-color: #2c3e50;
   -webkit-mask-image: url("../../Img/Icons/phone.svg");
   mask-image: url("../../Img/Icons/phone.svg");
   mask-repeat: no-repeat;
 }
-/* line 130, ../sass/_index.scss */
-html body .row .contact-container .contact .contact-left p {
-  color: #fff;
-}
-/* line 134, ../sass/_index.scss */
-html body .row .contact-container .contact .contact-right {
+/* line 223, ../sass/_index.scss */
+html body .presentation .contact-container .contact .contact-left p {
   text-align: center;
+  color: #2c3e50;
 }
-/* line 136, ../sass/_index.scss */
-html body .row .contact-container .contact .contact-right .mail {
+/* line 229, ../sass/_index.scss */
+html body .presentation .contact-container .contact .contact-right .mail {
   width: 50px;
   height: 50px;
   margin: 0 auto;
-  background-color: #fff;
+  background-color: #2c3e50;
+  text-align: center;
+  color: #2c3e50;
   -webkit-mask-image: url("../../Img/Icons/mail.svg");
   mask-image: url("../../Img/Icons/mail.svg");
   mask-repeat: no-repeat;
 }
-/* line 145, ../sass/_index.scss */
-html body .row .contact-container .contact .contact-right a {
-  color: #fff;
+/* line 240, ../sass/_index.scss */
+html body .presentation .contact-container .contact .contact-right a {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: #2c3e50;
 }
-/* line 151, ../sass/_index.scss */
-html body .row footer {
+/* line 250, ../sass/_index.scss */
+html body .footer {
   background-color: #fff;
-  padding: 0px;
+  margin: 0px;
 }
-/* line 154, ../sass/_index.scss */
-html body .row footer legend {
+/* line 253, ../sass/_index.scss */
+html body .footer legend {
   text-align: center;
   color: #e74c3c;
 }
-/* line 158, ../sass/_index.scss */
-html body .row footer p {
+/* line 257, ../sass/_index.scss */
+html body .footer p {
   font-style: italic;
   font-size: 0.5rem;
   text-align: center;
