--- a/Accueil/CSS/stylesheets/style.css
+++ b/Accueil/CSS/stylesheets/style.css
@@ -24,16 +24,17 @@ html body .navbar {
 /* line 15, ../sass/_index.scss */
 html body .navbar .navbar-brand {
   color: #e74c3c;
+  font-size: 1.5rem;
 }
-/* line 17, ../sass/_index.scss */
+/* line 18, ../sass/_index.scss */
 html body .navbar .navbar-brand:hover {
   color: #2c3e50;
 }
-/* line 24, ../sass/_index.scss */
+/* line 25, ../sass/_index.scss */
 html body .navbar div .navbar-nav .nav-item .nav-link {
   color: #2c3e50;
 }
-/* line 31, ../sass/_index.scss */
+/* line 32, ../sass/_index.scss */
 html body .cover {
   margin: 0px;
   height: 100%;
@@ -48,34 +49,36 @@ html body .cover {
   background-position: center;
   background-size: cover;
 }
-/* line 44, ../sass/_index.scss */
+/* line 45, ../sass/_index.scss */
 html body .cover a {
   width: 50px;
   height: 50px;
+  padding: 2rem;
   background-color: #e74c3c;
   -webkit-mask-image: url("../../Img/Icons/arrow-with-circle-down.svg");
   mask-image: url("../../Img/Icons/arrow-with-circle-down.svg");
+  mask-repeat: no-repeat;
   margin-bottom: 50px;
 }
-/* line 53, ../sass/_index.scss */
+/* line 56, ../sass/_index.scss */
 html body .presentation {
   background-color: #fff;
   margin: 0px;
 }
-/* line 56, ../sass/_index.scss */
+/* line 59, ../sass/_index.scss */
 html body .presentation h1 {
   margin: 50px auto 0px auto;
   font-size: 50px;
   color: #2c3e50;
   text-align: center;
 }
-/* line 62, ../sass/_index.scss */
+/* line 65, ../sass/_index.scss */
 html body .presentation p {
   margin: 0 auto 50px auto;
   text-align: center;
   color: #2c3e50;
 }
-/* line 67, ../sass/_index.scss */
+/* line 70, ../sass/_index.scss */
 html body .presentation .tripoint {
   min-height: 270px;
   padding: 50px 0px 0px;
@@ -84,7 +87,7 @@ html body .presentation .tripoint {
   justify-content: center;
   justify-content: space-between;
 }
-/* line 75, ../sass/_index.scss */
+/* line 78, ../sass/_index.scss */
 html body .presentation .tripoint div .disponibilite, html body .presentation .tripoint div .toutprojet, html body .presentation .tripoint div .formation {
   width: 50px;
   height: 50px;
@@ -92,55 +95,54 @@ html body .presentation .tripoint div .disponibilite, html body .presentation .t
   background-color: #fff;
   text-align: center;
 }
-/* line 82, ../sass/_index.scss */
+/* line 85, ../sass/_index.scss */
 html body .presentation .tripoint div .disponibilite {
   -webkit-mask-image: url("../../Img/Icons/calendar.svg");
   mask-image: url("../../Img/Icons/calendar.svg");
   mask-repeat: no-repeat;
 }
-/* line 87, ../sass/_index.scss */
+/* line 90, ../sass/_index.scss */
 html body .presentation .tripoint div .toutprojet {
   -webkit-mask-image: url("../../Img/Icons/code.svg");
   mask-image: url("../../Img/Icons/code.svg");
   mask-repeat: no-repeat;
 }
-/* line 92, ../sass/_index.scss */
+/* line 95, ../sass/_index.scss */
 html body .presentation .tripoint div .formation {
   -webkit-mask-image: url("../../Img/Icons/open-book.svg");
   mask-image: url("../../Img/Icons/open-book.svg");
   mask-repeat: no-repeat;
 }
-/* line 97, ../sass/_index.scss */
+/* line 100, ../sass/_index.scss */
 html body .presentation .tripoint div p, html body .presentation .tripoint div h4 {
   color: #fff;
   text-align: center;
 }
-/* line 103, ../sass/_index.scss */
+/* line 106, ../sass/_index.scss */
 html body .presentation .projet {
   margin: 0px;
   padding: 0px;
 }
-/* line 106, ../sass/_index.scss */
+/* line 109, ../sass/_index.scss */
 html body .presentation .projet p {
   margin: 0 auto 1rem auto;
 }
-/* line 109, ../sass/_index.scss */
+/* line 112, ../sass/_index.scss */
 html body .presentation .projet a {
   position: relative;
   display: flex;
   align-items: center;
+  justify-content: center;
   max-width: 650px;
   margin: 0 auto;
   padding: 0px;
-  min-height: 165px;
-  height: 100%;
 }
-/* line 118, ../sass/_index.scss */
+/* line 121, ../sass/_index.scss */
 html body .presentation .projet a img {
   width: auto;
   height: auto;
 }
-/* line 122, ../sass/_index.scss */
+/* line 125, ../sass/_index.scss */
 html body .presentation .projet a section {
   background-color: #e74c3c;
   position: absolute;
@@ -155,7 +157,7 @@ html body .presentation .projet a section {
   -moz-transition: all .2s;
   transition: all .2s;
 }
-/* line 135, ../sass/_index.scss */
+/* line 138, ../sass/_index.scss */
 html body .presentation .projet a section div {
   position: absolute;
   top: 50%;
@@ -163,38 +165,38 @@ html body .presentation .projet a section div {
   transform: translateY(-50%);
   text-align: center;
 }
-/* line 141, ../sass/_index.scss */
+/* line 144, ../sass/_index.scss */
 html body .presentation .projet a section div h3 {
   color: #fff;
 }
-/* line 144, ../sass/_index.scss */
+/* line 147, ../sass/_index.scss */
 html body .presentation .projet a section div p {
   color: #fff;
 }
-/* line 148, ../sass/_index.scss */
+/* line 151, ../sass/_index.scss */
 html body .presentation .projet a section:hover {
   opacity: 0.9;
   height: 100%;
 }
-/* line 155, ../sass/_index.scss */
+/* line 158, ../sass/_index.scss */
 html body .presentation .social-network-container {
   min-height: 270px;
   background-color: #2c3e50;
   flex-direction: column;
-  padding: 25px 0px;
+  padding: 50px 0 0px;
 }
-/* line 160, ../sass/_index.scss */
+/* line 163, ../sass/_index.scss */
 html body .presentation .social-network-container h2 {
   text-align: center;
   color: #fff;
   padding-bottom: 25px;
 }
-/* line 165, ../sass/_index.scss */
+/* line 168, ../sass/_index.scss */
 html body .presentation .social-network-container .social-network {
   justify-content: space-between;
   flex-direction: row;
 }
-/* line 168, ../sass/_index.scss */
+/* line 171, ../sass/_index.scss */
 html body .presentation .social-network-container .social-network .linkedin, html body .presentation .social-network-container .social-network .stackoverflow, html body .presentation .social-network-container .social-network .twitter {
   width: 50px;
   height: 50px;
@@ -203,52 +205,52 @@ html body .presentation .social-network-container .social-network .linkedin, htm
   text-align: center;
   text-decoration: none;
 }
-/* line 176, ../sass/_index.scss */
+/* line 179, ../sass/_index.scss */
 html body .presentation .social-network-container .social-network .linkedin {
   -webkit-mask-image: url("../../Img/Icons/linkedin.svg");
   mask-image: url("../../Img/Icons/linkedin.svg");
   mask-repeat: no-repeat;
 }
-/* line 181, ../sass/_index.scss */
+/* line 184, ../sass/_index.scss */
 html body .presentation .social-network-container .social-network .stackoverflow {
   -webkit-mask-image: url("../../Img/Icons/stackoverflow.svg");
   mask-image: url("../../Img/Icons/stackoverflow.svg");
   mask-repeat: no-repeat;
 }
-/* line 186, ../sass/_index.scss */
+/* line 189, ../sass/_index.scss */
 html body .presentation .social-network-container .social-network .twitter {
   -webkit-mask-image: url("../../Img/Icons/twitter.svg");
   mask-image: url("../../Img/Icons/twitter.svg");
   mask-repeat: no-repeat;
 }
-/* line 191, ../sass/_index.scss */
+/* line 194, ../sass/_index.scss */
 html body .presentation .social-network-container .social-network a, html body .presentation .social-network-container .social-network p {
   color: #fff;
   text-align: center;
 }
-/* line 197, ../sass/_index.scss */
+/* line 200, ../sass/_index.scss */
 html body .presentation .contact-container {
   margin: 0px;
   flex-direction: column;
   padding: 50px 0px;
   background-color: #fff;
 }
-/* line 202, ../sass/_index.scss */
+/* line 205, ../sass/_index.scss */
 html body .presentation .contact-container h2 {
   text-align: center;
   font-size: 50px;
   color: #2c3e50;
 }
-/* line 207, ../sass/_index.scss */
+/* line 210, ../sass/_index.scss */
 html body .presentation .contact-container p {
   text-align: center;
   color: #2c3e50;
 }
-/* line 211, ../sass/_index.scss */
+/* line 214, ../sass/_index.scss */
 html body .presentation .contact-container .contact {
   background-color: #fff;
 }
-/* line 214, ../sass/_index.scss */
+/* line 217, ../sass/_index.scss */
 html body .presentation .contact-container .contact .contact-left .phone {
   width: 50px;
   height: 50px;
@@ -258,12 +260,12 @@ html body .presentation .contact-container .contact .contact-left .phone {
   mask-image: url("../../Img/Icons/phone.svg");
   mask-repeat: no-repeat;
 }
-/* line 223, ../sass/_index.scss */
+/* line 226, ../sass/_index.scss */
 html body .presentation .contact-container .contact .contact-left p {
   text-align: center;
   color: #2c3e50;
 }
-/* line 229, ../sass/_index.scss */
+/* line 232, ../sass/_index.scss */
 html body .presentation .contact-container .contact .contact-right .mail {
   width: 50px;
   height: 50px;
@@ -275,24 +277,24 @@ html body .presentation .contact-container .contact .contact-right .mail {
   mask-image: url("../../Img/Icons/mail.svg");
   mask-repeat: no-repeat;
 }
-/* line 240, ../sass/_index.scss */
+/* line 243, ../sass/_index.scss */
 html body .presentation .contact-container .contact .contact-right a {
   display: flex;
   justify-content: center;
   text-align: center;
   color: #2c3e50;
 }
-/* line 250, ../sass/_index.scss */
+/* line 253, ../sass/_index.scss */
 html body .footer {
   background-color: #fff;
   margin: 0px;
 }
-/* line 253, ../sass/_index.scss */
+/* line 256, ../sass/_index.scss */
 html body .footer legend {
   text-align: center;
   color: #e74c3c;
 }
-/* line 257, ../sass/_index.scss */
+/* line 260, ../sass/_index.scss */
 html body .footer p {
   font-style: italic;
   font-size: 0.5rem;
