--- a/wp-content/themes/WMWP/style.css
+++ b/wp-content/themes/WMWP/style.css
@@ -87,14 +87,13 @@ html body .presentation p {
 }
 /* line 71, CSS/sass/_index.scss */
 html body .presentation .tripoint {
-  min-height: 270px;
   padding: 50px 0px 0px;
   margin: 0px;
   background-color: #e74c3c;
   justify-content: center;
   justify-content: space-between;
 }
-/* line 79, CSS/sass/_index.scss */
+/* line 78, CSS/sass/_index.scss */
 html body .presentation .tripoint div .disponibilite, html body .presentation .tripoint div .toutprojet, html body .presentation .tripoint div .formation {
   width: 50px;
   height: 50px;
@@ -102,39 +101,43 @@ html body .presentation .tripoint div .disponibilite, html body .presentation .t
   background-color: #fff;
   text-align: center;
 }
-/* line 86, CSS/sass/_index.scss */
+/* line 85, CSS/sass/_index.scss */
 html body .presentation .tripoint div .disponibilite {
   -webkit-mask-image: url("Img/Icons/calendar.svg");
   mask-image: url("Img/Icons/calendar.svg");
   mask-repeat: no-repeat;
 }
-/* line 91, CSS/sass/_index.scss */
+/* line 90, CSS/sass/_index.scss */
 html body .presentation .tripoint div .toutprojet {
   -webkit-mask-image: url("Img/Icons/code.svg");
   mask-image: url("Img/Icons/code.svg");
   mask-repeat: no-repeat;
 }
-/* line 96, CSS/sass/_index.scss */
+/* line 95, CSS/sass/_index.scss */
 html body .presentation .tripoint div .formation {
   -webkit-mask-image: url("Img/Icons/open-book.svg");
   mask-image: url("Img/Icons/open-book.svg");
   mask-repeat: no-repeat;
 }
-/* line 101, CSS/sass/_index.scss */
+/* line 100, CSS/sass/_index.scss */
 html body .presentation .tripoint div p, html body .presentation .tripoint div h4 {
   color: #fff;
   text-align: center;
 }
-/* line 107, CSS/sass/_index.scss */
+/* line 104, CSS/sass/_index.scss */
+html body .presentation .tripoint div p {
+  margin: 0 auto 50px auto;
+}
+/* line 109, CSS/sass/_index.scss */
 html body .presentation .projet {
   margin: 0px;
   padding: 0px;
 }
-/* line 110, CSS/sass/_index.scss */
+/* line 112, CSS/sass/_index.scss */
 html body .presentation .projet p {
   margin: 0 auto 1rem auto;
 }
-/* line 113, CSS/sass/_index.scss */
+/* line 115, CSS/sass/_index.scss */
 html body .presentation .projet a {
   position: relative;
   display: flex;
@@ -144,12 +147,13 @@ html body .presentation .projet a {
   margin: 0 auto;
   padding: 0px;
 }
-/* line 122, CSS/sass/_index.scss */
+/* line 123, CSS/sass/_index.scss */
 html body .presentation .projet a img {
   width: auto;
   height: auto;
+  padding: 0 15px;
 }
-/* line 126, CSS/sass/_index.scss */
+/* line 128, CSS/sass/_index.scss */
 html body .presentation .projet a section {
   background-color: #e74c3c;
   position: absolute;
@@ -164,7 +168,7 @@ html body .presentation .projet a section {
   -moz-transition: all .2s;
   transition: all .2s;
 }
-/* line 139, CSS/sass/_index.scss */
+/* line 141, CSS/sass/_index.scss */
 html body .presentation .projet a section div {
   position: absolute;
   top: 50%;
@@ -172,38 +176,38 @@ html body .presentation .projet a section div {
   transform: translateY(-50%);
   text-align: center;
 }
-/* line 145, CSS/sass/_index.scss */
+/* line 147, CSS/sass/_index.scss */
 html body .presentation .projet a section div h3 {
   color: #fff;
 }
-/* line 148, CSS/sass/_index.scss */
+/* line 150, CSS/sass/_index.scss */
 html body .presentation .projet a section div p {
   color: #fff;
 }
-/* line 152, CSS/sass/_index.scss */
+/* line 154, CSS/sass/_index.scss */
 html body .presentation .projet a section:hover {
   opacity: 0.9;
   height: 100%;
 }
-/* line 159, CSS/sass/_index.scss */
+/* line 161, CSS/sass/_index.scss */
 html body .presentation .social-network-container {
   min-height: 270px;
   background-color: #2c3e50;
   flex-direction: column;
   padding: 50px 0 0px;
 }
-/* line 164, CSS/sass/_index.scss */
+/* line 166, CSS/sass/_index.scss */
 html body .presentation .social-network-container h2 {
   text-align: center;
   color: #fff;
   padding-bottom: 25px;
 }
-/* line 169, CSS/sass/_index.scss */
+/* line 171, CSS/sass/_index.scss */
 html body .presentation .social-network-container .social-network {
   justify-content: space-between;
   flex-direction: row;
 }
-/* line 172, CSS/sass/_index.scss */
+/* line 174, CSS/sass/_index.scss */
 html body .presentation .social-network-container .social-network .linkedin, html body .presentation .social-network-container .social-network .stackoverflow, html body .presentation .social-network-container .social-network .twitter {
   width: 50px;
   height: 50px;
@@ -212,52 +216,55 @@ html body .presentation .social-network-container .social-network .linkedin, htm
   text-align: center;
   text-decoration: none;
 }
-/* line 180, CSS/sass/_index.scss */
+/* line 182, CSS/sass/_index.scss */
 html body .presentation .social-network-container .social-network .linkedin {
   -webkit-mask-image: url("Img/Icons/linkedin.svg");
   mask-image: url("Img/Icons/linkedin.svg");
   mask-repeat: no-repeat;
 }
-/* line 185, CSS/sass/_index.scss */
+/* line 187, CSS/sass/_index.scss */
 html body .presentation .social-network-container .social-network .stackoverflow {
   -webkit-mask-image: url("Img/Icons/stackoverflow.svg");
   mask-image: url("Img/Icons/stackoverflow.svg");
   mask-repeat: no-repeat;
 }
-/* line 190, CSS/sass/_index.scss */
+/* line 192, CSS/sass/_index.scss */
 html body .presentation .social-network-container .social-network .twitter {
   -webkit-mask-image: url("Img/Icons/twitter.svg");
   mask-image: url("Img/Icons/twitter.svg");
   mask-repeat: no-repeat;
 }
-/* line 195, CSS/sass/_index.scss */
+/* line 197, CSS/sass/_index.scss */
 html body .presentation .social-network-container .social-network a, html body .presentation .social-network-container .social-network p {
   color: #fff;
   text-align: center;
 }
-/* line 201, CSS/sass/_index.scss */
+/* line 203, CSS/sass/_index.scss */
 html body .presentation .contact-container {
   margin: 0px;
   flex-direction: column;
   padding: 50px 0px;
   background-color: #fff;
 }
-/* line 206, CSS/sass/_index.scss */
+/* line 208, CSS/sass/_index.scss */
 html body .presentation .contact-container h2 {
   text-align: center;
   font-size: 50px;
   color: #2c3e50;
 }
-/* line 211, CSS/sass/_index.scss */
+/* line 213, CSS/sass/_index.scss */
 html body .presentation .contact-container p {
   text-align: center;
   color: #2c3e50;
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
-/* line 215, CSS/sass/_index.scss */
+/* line 219, CSS/sass/_index.scss */
 html body .presentation .contact-container .contact {
   background-color: #fff;
+  justify-content: center;
 }
-/* line 218, CSS/sass/_index.scss */
+/* line 223, CSS/sass/_index.scss */
 html body .presentation .contact-container .contact .contact-left .phone {
   width: 50px;
   height: 50px;
@@ -267,12 +274,14 @@ html body .presentation .contact-container .contact .contact-left .phone {
   mask-image: url("Img/Icons/phone.svg");
   mask-repeat: no-repeat;
 }
-/* line 227, CSS/sass/_index.scss */
+/* line 232, CSS/sass/_index.scss */
 html body .presentation .contact-container .contact .contact-left p {
   text-align: center;
   color: #2c3e50;
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
-/* line 233, CSS/sass/_index.scss */
+/* line 240, CSS/sass/_index.scss */
 html body .presentation .contact-container .contact .contact-right .mail {
   width: 50px;
   height: 50px;
@@ -284,24 +293,24 @@ html body .presentation .contact-container .contact .contact-right .mail {
   mask-image: url("Img/Icons/mail.svg");
   mask-repeat: no-repeat;
 }
-/* line 244, CSS/sass/_index.scss */
+/* line 251, CSS/sass/_index.scss */
 html body .presentation .contact-container .contact .contact-right a {
   display: flex;
   justify-content: center;
   text-align: center;
   color: #2c3e50;
 }
-/* line 254, CSS/sass/_index.scss */
+/* line 261, CSS/sass/_index.scss */
 html body .footer {
   background-color: #fff;
   margin: 0px;
 }
-/* line 257, CSS/sass/_index.scss */
+/* line 264, CSS/sass/_index.scss */
 html body .footer legend {
   text-align: center;
   color: #e74c3c;
 }
-/* line 261, CSS/sass/_index.scss */
+/* line 268, CSS/sass/_index.scss */
 html body .footer p {
   font-style: italic;
   font-size: 0.5rem;
